--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,25 +1,25 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-	<title><%= @title || Blog.title %></title>
-	<link href="/main.css" rel="stylesheet" type="text/css" />
+	<title><%= Blog.title %></title>
+	<link href="/main1.css" rel="stylesheet" type="text/css" />
+	<link href="/feed" rel="alternate" title="Primary Feed" type="application/atom+xml" />
 </head>
 <body>
-<div id="header">
-	<div id="logo2">
+
+<div id="wrapper">
+	<div id="header">
 		<h1><a href="/"><%= Blog.title %></a></h1>
-		<p>by <%= Blog.author %></p>
 	</div>
-</div>
 
-<div id="content">
-	<%= yield %>
-</div>
-
-<div id="footer">
-	<p id="legal">
-	Content by <%= Blog.author %> | 
-	Design adapted from <a href="http://www.freecsstemplates.org/preview/replenish">Replenish</a>
-</div>
+	<div id="content">
+		<%= yield %>
+	</div> <!--content-->
+	<div id="footer">
+		<p>
+		All Rights Reserved, &#169; 2009 <%= Blog.author %>
+		</p>
+	</div>
+</div> <!--wrapper-->
 </body>
 </html>
