--- a/views/auth.erb
+++ b/views/auth.erb
@@ -1,6 +1,23 @@
 <h2>Admin Auth</h2>
 <form action="/auth" method="post">
-	<input type="password" name="password" />
+	<table>
+		<tr>
+			<td>
+				<label for="login">Login</label>
+			</td>
+			<td>
+				<input type="text" name="login" />
+			</td>
+		</tr>
+		<tr>
+			<td>
+				<label for="password">Password</label>
+			</td>
+			<td>
+				<input type="password" name="password" />
+			</td>
+		</tr>
+	</table>
 	<input type="submit" value="Login" />
 </form>
-<script type="text/javascript">document.forms[0].password.focus()</script>
+<script type="text/javascript">document.forms[0].login.focus()</script>
