--- a/views/index.erb
+++ b/views/index.erb
@@ -49,6 +49,9 @@
 				<li>
 					<div id="new_post"><a href="/posts/new">New post</a></div>
 				</li>
+				<li>
+					<div id="users_link"><a href="/users">Users</a></div>
+				</li>
 			<% end %>
 		</ul>
 	</div>
