--- a/views/edit.erb
+++ b/views/edit.erb
@@ -1,11 +1,24 @@
+<h2>Post</h2>
 <form action="<%= url %>" method="post" name="edit">
-<div class="postzoom">
-	<h2 class="title"><input type="text" name="title" value="<%= post.title %>" /></h2>
-	<p class="meta"><input type="text" name="tags" value="<%= post.tags %>" /></p>
-	<p class="meta"><%= post.created_at %></p>
-	<div class="entry">
-		<textarea name="body"><%= post.body %></textarea>
-	</div>
-	<div class="edit"><input type="submit" value="Save" /></div>
-</div>
+	<fieldset>
+		<legend>Meta</legend>
+				<label for="login">Title: </label>
+				<input type="text" name="title" value="<%= post.title %>" /><br/>
+
+				<label for="login">Tags: </label>
+				<input type="text" name="tags" value="<%= post.tags %>" /><br/>
+				
+				<% if post.created_at %>
+						<label for="created_at">Created At</label>
+						<%= post.created_at %><br/>
+				<% end %>
+	</fieldset>
+	<fieldset>
+		<legend>Body </legend>
+			<label for="body">Body: </label>
+			<textarea name="body"><%= post.body %></textarea><br/>
+			<label for="kludge"></label>
+			<input type="submit" value="Save" id="submit" />
+	</fieldset>
+	
 </form>
