--- a/views/archive.erb
+++ b/views/archive.erb
@@ -2,7 +2,7 @@
 <table class="archive">
 <% posts.each do |post| %>
 	<tr>
-		<td class="date"><%= post.created_at.strftime("%b %d %Y") %></td>
+		<td class="date"><%= post.created_at.strftime("%b %d %Y") %> - </td>
 		<td class="title"><a href="<%= post.url %>"><%= post.title %></a></td>
 	</tr>
 <% end %>
