--- a/public/main1.css
+++ b/public/main1.css
@@ -23,7 +23,7 @@ body{
 	line-height:1.5em;
 	font-size:1.3em;
 	text-align:left;
-	width:46.15em;
+	width:50.15em;
 	color:#999;
 }
 #sidebar{margin:1em 0;}
@@ -39,7 +39,7 @@ body{
 h1{line-height:1.2em;font-size:1.8em;font-weight:normal;}
 h1 a{color:#ccc;}
 h1 a:hover{color:#f90;}
-h2, h3{line-height:1.2em;font-size:1.5em;font-weight:normal;}
+h2, h3{line-height:1.2em;font-size:1.5em;font-weight:normal; padding-bottom: 10px;}
 h2.error{margin:5em 0;color:#ccc;}
 p{margin:1em 0;line-height:1.6em;}
 em,strong{color:#ccc;}
