Added atom link, and ui tweaks.

--- a/views/index.erb
+++ b/views/index.erb
@@ -43,7 +43,7 @@
 	<div class="sidebar-item">
 		<ul>
 			<li>
-				<a href="/past">Archive</a>
+				<a href="/past">Older Posts</a>
 			</li>
 			<% if admin? %>
 				<li>
@@ -53,6 +53,13 @@
 					<div id="users_link"><a href="/users">Users</a></div>
 				</li>
 			<% end %>
+		</ul>
+	</div>
+	<div class="sidebar-item">
+		<ul>
+			<li>
+				<p><a class="feed" href="/feed">Atom Feed</a></p>
+			</li>
 		</ul>
 	</div>
 </div>
