--- a/public/main.css
+++ b/public/main.css
@@ -1,291 +1,199 @@
-body {
-	margin: 0px;
-	padding: 20px;
-	margin-left: 50px;
-	background: #0A0A0D;
-	text-align: justify;
-	font: 14px "Trebuchet MS", Arial, Helvetica, sans-serif;
-	color: #FFFFDC;
+/*  
+title: Vostok Theme
+author: Javier Cañada
+version: 0.1
+homepage: http://www.vostoktheme.com/
+summary: Based in Vostok Theme for Wordpress originally designed by Javier Cañada
+adapted_by: itwp
+adapted_by_url: http://intothewepit.com
+*/
+
+*{margin:0;padding:0;}
+body{
+	background:#2f2f2f;
+	border-top:5px solid #333;
+	font-family:"Lucida Grande",Helvetica,Arial,sans-serif;
+	font-size:62.5%;
+	margin:0;
+	padding:0;
+	text-align:center;
+}
+#wrapper{
+	margin:0 auto;
+	line-height:1.5em;
+	font-size:1.3em;
+	text-align:left;
+	width:50.15em;
+	color:#999;
+}
+#sidebar{margin:1em 0;}
+.sidebar-item{float:left;width:48%;}
+#header{padding:3em 1em 1em 0;}
+#header .description{margin:0;}
+.site_name {float:left;}
+#footer{
+	border-top:1px solid #3c3c3c;
+	padding:.5em 0 1em;
+	clear:both;
 }
 
-h1, h2, h3 {
-	font: 1.82em;
-	font-weight: normal;
-	font-family: Arial, Helvetica, sans-serif;
-	color: #FFFFFF;
-	text-align: left;
+.clear {clear: both;}
+h1{line-height:1.2em;font-size:1.8em;font-weight:normal;}
+h1 a{color:#ccc;}
+h1 a:hover{color:#f90;}
+h2, h3{line-height:1.2em;font-size:1.5em;font-weight:normal; padding-bottom: 10px;}
+h2.error{margin:5em 0;color:#ccc;}
+p{margin:1em 0;line-height:1.6em;}
+em,strong{color:#ccc;}
+blockquote{margin:1.5em;padding:1em;background-color:#2f2f2f;}
+a{text-decoration:none;outline:none;color:#09c;}
+a.feed{padding:3px 0 3px 20px;background:url('/images/ico-rss.jpg') center left no-repeat;}
+input,textarea{font-family:inherit;}
+ul,ol{list-style-type:none;}
+
+.hentry{
+	margin:2.6em 0;
+	padding:2.5em 2.7em 2.0em;
+	background-color:#3c3c3c;
+	position:relative;
 }
+.hentry a{color:#f90;}
+.hentry a:hover{color:#ccc;}
+.hentry h2 a{color:#ccc;}
+.hentry h2 a:hover{color:#f90;}
+.header{padding-bottom:5em;}
+.logout {text-align: right;float: right;}
+.updated{position:absolute;top:0;right:1em;font-size:.95em;color:#828282;}
+.entry-content{overflow:hidden;}
+.entry-content img, .entry-content object, .entry-content embed {display:block;margin:2em auto;}
+.entry-content img{border:5px solid #fff;}
+.entry-content ul li{padding-left:12px;background:url('/images/bullet.gif') center left no-repeat;line-height:1.8em;}
+.entrymeta{margin:.5em -1.5em -1.2em 0;text-align:right;}
+.entrymeta a{color:#ccc;text-decoration:underline;}
+.entrymeta a:hover{color:#f90;}
+.author {font-size: .8em;padding-left:8px;padding-bottom:1.6em;margin-top:-0.9em;}
+.tags {padding-top:10px;}
 
-p, ol, ul {
-	line-height: 1.67em;
-}
+#comments{margin:1em 0;}
+#comments h3{margin:2em 0 1em;color:#ccc;}
+#comments ol{padding:1em 0 4em;}
+.comment{position:relative;margin-top:1em;border-top:1px solid #3c3c3c;padding:1em 1.5em .5em;}
+.comment-author{color:#ccc;}
+.comment-author cite{font-style:normal;}
+.comment-author a{color:#f90;text-decoration:underline;}
+.comment-author a:hover{color:#ccc;}
+.comment-date{position:absolute;bottom:-1.5em;right:.5em;}
+.comment-date a{color:#999;}
+.comment-date a:hover{color:#ccc;}
+.comment blockquote{margin:1em 0;padding:0;}
+#do-comment-box{margin:3em 0;padding:.5em 2.7em 2.5em;background-color:#3c3c3c;}
+#do-comment-box p{margin:0 0 .5em;}
+#do-comment-box label{display:block;}
+#do-comment-box textarea{width:520px;padding:.3em;font-size:1em;}
+#do-comment-box input{width:250px;margin-bottom:.5em;padding:.1em;font-size:1em;}
+p.btn{text-align:right;}
+#do-comment-box p.btn input{width:auto;}
+#comment-errors{margin-bottom:1em;padding:.5em;background-color:#FFC;color:#333;}
+p.error{width:250px;padding:.3em;background-color:#E8EABC;color:red;}
 
-ul {
-	padding-left: 1.2em;
-}
+#sidebar{margin-top:8em;}
+#sidebar a{color:#ccc;}
+#sidebar a:hover{color:#f90;}
 
-a {
-	color: #828170;
-}
+input#q{width:175px;}
+.sidebar-item form p{display:inline;}
+.sidebar-item form{margin-bottom:1em;}
+.sidebar-item p{margin:.3em 0;}
 
-a:hover {
-	text-decoration: none;
-}
+#footer a{text-decoration:underline;}
+#section-headline{margin-top:3em;}
+#section-headline a{color:#f90;text-decoration:underline;}
+#section-headline a:hover{color:#ccc;}
 
-hr {
-	display: none;
-}
+h2#search-results-title{margin-top:3em;}
 
-/* Logo */
-
-#logo h1 {
-	margin: 0;
-	height: 160px;
-	padding: 40px 0 0 0px;
-	text-transform: lowercase;
-	letter-spacing: -2px;
-	font-size: 4em;
-	font-weight: normal;
-	color: #FFFFFF;
-}
-
-#logo h1 a {
-	display: block;
-	text-decoration: none;
-	color: #FFFFFF;
-}
-
-#logo p {
-	margin: -103px 0 0 2px;
-	text-transform: uppercase;
-	font-family: Tahoma, Arial, Helvetica, sans-serif;
-	font-weight: bold;
-}
-
-#logo a {
-	display: block;
-	text-decoration: none;
-	color: #FFFFFF;
-}
-
-#logo2 h1 {
-	margin: 0;
-	height: 130px;
-	padding: 40px 0 0 0px;
-	text-transform: lowercase;
-	letter-spacing: -2px;
-	font-size: 2em;
-	font-weight: normal;
-	color: #FFFFFF;
-}
-
-#logo2 h1 a {
-	display: block;
-	text-decoration: none;
-	color: #FFFFFF;
-}
-
-#logo2 p {
-	margin: -103px 0 0 2px;
-	text-transform: uppercase;
-	font-family: Tahoma, Arial, Helvetica, sans-serif;
-	font-weight: bold;
-}
-
-#logo2 a {
-	display: block;
-	text-decoration: none;
-	color: #FFFFFF;
-}
-
-/* Content */
-
-#content {
-	margin: 0px auto;
-	padding: 20px 0 0 0;
-	float: left;
-	width: 50em;
-	margin-bottom: 10px;
-}
-
-/* Post */
-
-.post {
-	margin-top: 20px;
-}
-
-.post .date {
-	float: left;
-	width: 29px;
-	height: 32px;
-	margin: 0;
-	margin-top: 3px;
-	margin-right: 20px;
-	padding-top: 2px;
-	text-transform: uppercase;
-	text-align: center;
-	font-size: 10px;
-	font-weight: bold;
-	color: #999999;
-}
-
-.post .date b {
-	margin: 0;
-	padding: 0;
-	display: block;
-	margin-top: -5px;
-	font-size: 14px;
-	color: #5C5C5C;
-	
-}
-
-.post .title {
-	margin: 0;
-	padding: 0px 0 0 0;
-	margin-left: 10px;
-	padding-left: 10px;
-	font-size: 1.4em;
-}
-
-.post .title a {
-	color: white;
-	text-decoration: none;
-}
-
-.post .meta {
-	margin: 0 0 10px 20px;
-	padding: 0;
-	line-height:normal;
-	text-transform: uppercase;
-	color: #979680;
-}
-
-.post .meta a {
-	color: #828170;
-}
-
-.post .entry {
-	margin: 0;
-	padding: 0 0 20px 50px;
-}
-
-#older_posts {
-	font-size: 120%;
-}
-
-#new_post {
-	position: absolute;
-	top: 1em;
-	right: 1em;
-}
-
-/* Post */
-
-.postzoom {
-	margin-top: 20px;
-	position: relative;
-}
-
-.postzoom .title {
-	margin: 0;
-	padding: 0px 0 0 0;
-	font-size: 3em;
-}
-
-.postzoom .meta {
-	margin: 0;
-	padding: 0;
-	line-height: normal;
-	text-transform: uppercase;
-	color: #979680;
-}
-
-.postzoom .entry {
-	margin: 0;
-	padding: 0;
-	padding-top: 10px;
-	padding-bottom: 20px;
-}
-
-.postzoom .edit {
-	text-align: right;
-	position: absolute;
-	top: 0;
-	right: 0;
-}
-
-/* Footer */
-
-#footer {
-	margin: 0 auto;
-	padding-top: 20px;
-	padding-bottom: 20px;
-	font-family: Tahoma, Arial, Helvetica, sans-serif;
-	color: #FFFFFF;
-}
-
-#legal {
-	clear: both;
-	margin: 0;
-	padding: 10px 0;
-	font-size: 10px;
-	color: #525252;
-}
-
-/* Archive */
 .archive .date {
 	font-size: 85%;
 	color: #828170;
 }
 
-.archive .title a {
-	font-size: 120%;
-	text-decoration: none;
-	color: #FFFFDC;
+.clearfix:after{content: ".";
+    display: block;
+    height: 0;
+    clear: both;
+    visibility: hidden;
+}
+* html .clearfix{zoom:1;}/*=ie*/
+
+pre, .code {
+        padding: 5px 5px;
+        margin: 5px 0 5px;
+        border-left: 5px solid #666666;
+        background: #222222; 
+        font: 1em/1.5 "Courier News", monospace;
+        color: #bbbbbb;
+        overflow : auto;
 }
 
-/* Code blocks */
-
-pre {
-	font-family: Monaco, monospace;
-	color: #ccc;
-	background: #000;
-	border-left: 6px solid #222;
-	padding: 0.4em;
-	padding-left: 0.8em;
+form {  /* set width in form, not fieldset (still takes up more room w/ fieldset width */
+  font:100% verdana,arial,sans-serif;
+  margin: 0;
+  padding: 0;
+  min-width: 500px;
+  max-width: 800px;
+  width: 800px; 
 }
 
-pre span.attribute { color: #009900; }
-pre span.char { color: #F00; }
-pre span.class { color: #A020F0; font-weight: bold; }
-pre span.comment { color: #0000FF; }
-pre span.constant { color: #008B8B; }
-pre span.escape { color: #6A5ACD; }
-pre span.expr { color: #2222CC; }
-pre span.global { color: #11AA44; }
-pre span.ident { color: #CCCCCC; }
-pre span.keyword { color: #A52A2A; font-weight: bold; }
-pre span.method { color: #008B8B; }
-pre span.module { color: #A020F0; font-weight: bold; }
-pre span.number { color: #DD00DD; }
-pre span.punct { color: #6A5ACD; }
-pre span.regex { color: #DD00DD; }
-pre span.string { color: #DD00DD; }
-pre span.symbol { color: #008B8B; }
-
-/* Edit post */
-
-form[name=edit] input[name=title] {
-	font-size: 100%;
-	width: 300pt;
-}
-form[name=edit] input[name=tags] {
-	font-size: 100%;
-	width: 300pt;
-}
-form[name=edit] textarea {
-	font-size: 100%;
-	width: 50em;
-	height: 25em;
+form fieldset {
+  / * clear: both; note that this clear causes inputs to break to left in ie5.x mac, commented out */
+  border-color: #000;
+  border-width: 1px;
+  border-style: solid;
+  padding: 10px;        /* padding in fieldset support spotty in IE */
+  margin: 0;
 }
 
+form fieldset legend {
+	font-size:1.1em; /* bump up legend font size, not too large or it'll overwrite border on left */
+                       /* be careful with padding, it'll shift the nice offset on top of border  */
+}
+
+form label { 
+	display: block;  /* block float the labels to left column, set a width */
+	float: left; 
+	width: 150px; 
+	padding: 0; 
+	margin: 5px 0 0; /* set top margin same as form input - textarea etc. elements */
+	text-align: right; 
+}
+
+form input {
+	/* display: inline; inline display must not be set or will hide submit buttons in IE 5x mac */
+	width:auto;      /* set width of form elements to auto-size, otherwise watch for wrap on resize */
+	margin:5px 0 0 10px; /* set margin on left of form elements rather than right of
+                              label aligns textarea better in IE */
+}
+
+form textarea {
+	margin:5px 0 0 10px;
+	width: 600px;
+	height: 800px;
+}
+form input#reset {
+	margin-left:0px; /* set margin-left back to zero on reset button (set above) */
+}
+
+textarea { overflow: auto; }
+
+form small {
+	display: block;
+	margin: 0 0 5px 160px; /* instructions/comments left margin set to align w/ right column inputs */
+	padding: 1px 3px;
+	font-size: 88%;
+}
+
+form .required{font-weight:bold;} /* uses class instead of div, more efficient */
+
+form br {
+	clear:left; /* setting clear on inputs didn't work consistently, so brs added for degrade */
+}
