--- a/views/index.erb
+++ b/views/index.erb
@@ -2,20 +2,19 @@
 	<% posts.each do |post| %>
 		<div class="hentry">
 			<h2 class="entry-title"><a href="<%= post.url %>"><%= post.title %></a></h2>
-			<p class="updated"><%= post.created_at.strftime("%b") %><b><%= post.created_at.strftime("%d") %></b></p>
-			<p class="meta"><%= "#{load_json(post.author)['fname']} #{load_json(post.author)['lname']}" if post.author %><br/>
-				
-				<small>
-				<%= post.linked_tags %>
-				<% if Blog.disqus_shortname %>
-					| <a href="<%= post.url %>#disqus_thread">comments</a>
-				<% end %>
-			</small></p>
+			<p class="updated"><%= post.created_at.strftime("%m/%d/%Y") %></p>
+			<div class='author'>by <%= "#{load_json(post.author)['fname']} #{load_json(post.author)['lname']}" if post.author %></div>
+			
 			<div class="entry">
 				<%= post.summary_html %>
 				<% if post.more? %>
 					<a href="<%= post.url %>">Continue reading &raquo;</a>
 				<% end %>
+					
+					<% if Blog.disqus_shortname %>
+						<div class="entrymeta"><a href="<%= post.url %>#disqus_thread">comments</a></div>
+					<% end %>
+	
 			</div>
 		</div>
 	<% end %>
