--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,17 +2,18 @@
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<title><%= Blog.title %></title>
-	<link href="/main1.css" rel="stylesheet" type="text/css" />
+	<link href="/main.css" rel="stylesheet" type="text/css" />
 	<link href="/feed" rel="alternate" title="Primary Feed" type="application/atom+xml" />
 </head>
 <body>
 
 <div id="wrapper">
 	<div id="header">
-		<h1><a href="/"><%= Blog.title %></a></h1>
+		<div class="site_name"><h1><a href="/"><%= Blog.title %></a></h1></div>
 		<% if admin? %>
-			<div id="logout"><a href="/logout">Logout</a></div>
+			<div class="logout"><a href="/logout">Logout</a></div>
 		<% end %>
+		<div class='clear'></div>
 	</div>
 
 	<div id="content">
