--- a/views/tagged.erb
+++ b/views/tagged.erb
@@ -1,14 +1,41 @@
-<h1>Posts tagged <%= tag %></h1>
-<% posts.each do |post| %>
-<div class="post">
-	<p class="date"><%= post.created_at.strftime("%b") %><b><%= post.created_at.strftime("%d") %></b></p>
-	<h2 class="title"><a href="<%= post.url %>"><%= post.title %></a></h2>
-	<p class="meta"><small><%= post.linked_tags %> | <a href="<%= post.url %>#disqus_thread">comments</a></small></p>
-	<div class="entry">
-		<%= post.summary_html %>
-		<% if post.more? %>
-			<a href="<%= post.url %>">Continue reading &raquo;</a>
-		<% end %>
-	</div>
+<h2>Posts tagged <%= tag %></h2>
+<div id ="main-content">
+	<% posts.each do |post| %>
+		<div class="hentry">
+
+			<h2 class="entry-title"><a href="<%= post.url %>"><%= post.title %></a></h2>
+			<p class="updated"><%= post.created_at.strftime("%m/%d/%Y") %></p>
+			<div class='author'>by <%= "#{load_json(post.author)['fname']} #{load_json(post.author)['lname']}" if post.author %></div>
+			
+			<div class="entry">
+				<%= post.summary_html %>
+				<% if post.more? %>
+					<a href="<%= post.url %>">Continue reading &raquo;</a>
+				<% end %>
+				<% if Blog.disqus_shortname %>
+					<div class="entrymeta"><a href="<%= post.url %>#disqus_thread">comments</a></div>
+				<% end %>
+			</div>
+	
+		</div>
+	<% end %>
+	
+	<% if Blog.disqus_shortname %>
+		<script type="text/javascript">
+		//<[CDATA[
+		(function() {
+			var links = document.getElementsByTagName('a');
+			var query = '?';
+			for(var i = 0; i < links.length; i++) {
+				if(links[i].href.indexOf('#disqus_thread') >= 0) {
+					query += 'url' + i + '=' + encodeURIComponent(links[i].href) + '&';
+				}
+			}
+			document.write('<script type="text/javascript" src="http://disqus.com/forums/<%= Blog.disqus_shortname %>/get_num_replies.js' + query + '"></' + 'script>');
+			})();
+		//]]>
+		</script>
+	<% end %>
+	
 </div>
-<% end %>
+
