--- a/views/index.erb
+++ b/views/index.erb
@@ -51,6 +51,9 @@
 				<li>
 					<div id="users_link"><a href="/users">Users</a></div>
 				</li>
+				<li>
+					<div id="reorder_link"><a href="/posts/reorder_by_created_at">Reorder Posts</a></div>
+				</li>
 			<% end %>
 		</ul>
 	</div>
