Added Sinatra content for so the data picker js is not included on public pages. 32k less on public pages woot.

--- a/views/edit.erb
+++ b/views/edit.erb
@@ -1,3 +1,7 @@
+<% content_for :head do %>
+	<script type="text/javascript" src="/js/calendarDateInput.js"></script>
+<% end %>
+
 <h2>Post</h2>
 <form action="<%= url %>" method="post" name="edit">
 	<fieldset>
