--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,7 +4,7 @@
 	<title><%= Blog.title %></title>
 	<link href="/main.css" rel="stylesheet" type="text/css" />
 	<link href="/feed" rel="alternate" title="Primary Feed" type="application/atom+xml" />
-	<script type="text/javascript" src="/js/calendarDateInput.js"></script>
+	<% yield_content :head %>
 </head>
 <body>
 
